--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -1,5 +1,5 @@
 build:
-  version: "1.0"
+  version: "1.0111111111111"
 
 accounts:
   message: "Hey, welcome to EazyBank accounts related webhook AsssssssssssssssssssssssssssssssssssssssssssPIs"
